[project]
name = "textual-countdown"
version = "1.0.0"
description = "A visual countdown widget for Textual applications"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=1.0.0",
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "terminal",
    "library",
    "widget",
]
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://textual-countdown.davep.dev"
Repository = "https://github.com/davep/textual-countdown"
Documentation = "https://textual-countdown.davep.dev"
Source = "https://github.com/davep/textual-countdown"
Issues = "https://github.com/davep/textual-countdown/issues"
Discussions = "https://github.com/davep/textual-countdown/discussions"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "mypy>=1.14.1",
    "codespell>=2.4.1",
    "ruff>=0.12.9",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-material>=9.6.20",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]
