[metadata]
name = textual-countdown
description = A visual coutndown widget for Textal applications
version = attr: textual_countdown.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/textual-countdown
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: MIT License
license_files = LICENCE
keywords = terminal, library, widget
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Terminals
    Topic :: Software Development :: Libraries
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/textual-countdown/blob/main/README.md
    Source = https://github.com/davep/textual-countdown
    Issues = https://github.com/davep/textual-countdown/issues
    Discussions = https://github.com/davep/textual-countdown/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires = textual>=0.47.0
python_requires = >=3.8

[options.package_data]
textual_countdown = py.typed

### setup.cfg ends here
